# Chip-8-Emulator

./: .gitignore  CMakeLists.txt  Chip8Emulator  README.md  flake.nix
assets/roms/cc0/: .README
src/: cpu.cpp  cpu.h  glfwinput.cpp  glfwinput.h  input.h  main.cpp  renderer.cpp  renderer.h
src/shaders/: default.vert
